Updated styles, trying to fix Facebook Like Button misalignment <http://stackoverflow.com/questions/4770372/misalignment-of-facebook-twitter-buttons>

--- a/media/css/style.less
+++ b/media/css/style.less
@@ -271,4 +271,10 @@ header, #main, footer, #mainmenu {
 			display: inline-block;
 		}
 	}
+	
+	.fb-like {
+		vertical-align: top;
+		zoom: 1;
+		display: inline;
+	}
 }
